<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@color/main_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/main_footer_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <TextView android:textSize="12.0dip" android:textColor="@color/darker_gray" android:gravity="center" android:id="@id/footer_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rules_menu" />
        <LinearLayout android:orientation="horizontal" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0dip" android:textColor="@color/darker_gray" android:gravity="center" android:id="@id/agreement_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/rules_text" android:layout_weight="1.0" />
            <TextView android:textSize="12.0dip" android:textColor="@color/darker_gray" android:gravity="center" android:id="@id/exit_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/exit" android:layout_weight="2.0" />
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="outsideInset" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/main_footer_layout" android:isScrollContainer="true" android:fadeScrollbars="false">
        <LinearLayout android:orientation="vertical" android:paddingLeft="8.0dip" android:paddingTop="8.0dip" android:paddingRight="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textColor="@color/baloon_color" android:layout_gravity="right" android:id="@id/baloon" android:background="@drawable/green" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/thanks_for_install" />
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/install_logo" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginTop="20.0dip" android:layout_marginBottom="15.0dip" android:src="@drawable/install_icon" android:contentDescription="@string/logotype" />
            <TextView android:textSize="16.0dip" android:textColor="@color/main_text_color" android:gravity="center" android:id="@id/thanks_for_install_text" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/press_start" />
            <Button android:textSize="18.0dip" android:textColor="@color/button_text_color" android:layout_gravity="center_horizontal" android:id="@id/yes_btn" android:background="@drawable/button_bg" android:layout_width="180.0dip" android:layout_height="60.0dip" android:text="@string/i_accept" />
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/ua_offert_text" android:id="@id/main_text" android:padding="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>